styles/prosilver/theme/common.css
/* ... */
.quickview-image, .quickview-desc {
	height: 130px;
	margin-top: 5px;
}

.quickview-desc {
	display: none;
}

.quickview-label {
	background-color: #FFFFFF;
	border: 1px solid #c9cacb;
	border-radius: 3px;
	display: inline-block;
	padding: 4px;
}

.label-clean, .label-hidden, .label-disabled, .label-new {
	color: #9D1212;
}

.categories {
	border-right: 1px dotted #b4bac0;
	box-sizing: border-box;
	display: inline-block;
	float: left;
	font-size: 1.2em;
	list-style: none;
	padding-right: 5px;
	vertical-align: top;
	width: 25%;
}

.categories a {
	display: block;
	padding: 5px;
}

.categories a:hover, .sort-option a:hover {
	text-decoration: none;
}

.categories span {
	float: right;
}

.categories .active {
	background-color: #4692bf;
	border-radius: 3px;
	color: #FFFFFF;
	padding-right: 5px;
}

.sort-option .active {
	font-style: italic;
}

.sort-option {
	display: inline-block;
	margin-left: 5px;
	margin-top: 2px;
	padding: 3px;
}

.sort-option:after {
	content: '\25BC';
}

.sort-option .dropdown-toggle {
	cursor: pointer;
}

/* Listings
--------------------------------------------- */
dd.faq-tools {
	text-align: right;
	border: 0 !important;
	width: 240px;
}

dd.general {
	padding-left: 5px !important;
	padding-right: 5px !important;
	font-size: 1.1em;
}

dd.general img {
	vertical-align: middle;
}

#categories .forums dd.general {
	font-size: 1.2em;
}

#categories .content {
	font-size: 1.2em;
}

ul.simple li.header dt, ul.simple li.header dd {
	color: #000000;
	margin-bottom: 2px;
}

.container .cplist li.row {
	border-bottom: 1px solid #B5C1CB;
	border-top: 1px solid #F9F9F9;
}

.container .forabg {
	background-image: none;
}

.revisions dt {
	margin-right: -520px !important;
}

.revisions .list-inner {
	margin-right: 520px !important;
}

.revisions dd {
	width: 130px !important;
}

dd.revision-version, dd.phpbb-version {
	text-align: center;
}

#translations-panel {
	clear: both;
}

#translations-panel dl dt ul li {
	padding: 2px 0;
}

ul.topiclist dd.revision-actions {
	text-align: right;
	border-left: 0;
}

ul.topiclist dd.revision-status {
	text-align: center;
	border-left: 0;
}

dl.preview-select {
	padding-top: 15px;
	margin-bottom: -5px;
}

dt.set-preview {
	margin-left: 40px;
}

img.icon {
	float: right;
}

/* Rating Code */
ul.rating, ul.rated {
	list-style-type: none;
	display: inline;
}

ul.rating li, ul.rated li {
	display: inline;
	border: 0;
}

.rating a {
	text-decoration: none;
}

.rating-available, .rating-inactive, .rating-rated, .rating-remove {
	background-image: url("./images/icons.png");
	background-repeat: no-repeat;
	display: inline-block;
	height: 16px;
	width: 16px;
}

.rating-available { background-position: 0 -32px; }
.rating-inactive { background-position: 0 -48px; }
.rating-rated { background-position: 0 -63px; }
.rating-remove { background-position: 0 -80px; }

/* Soft deleted item */
.deleted {
	background-color: #FFFFFF;
	border: 1px solid #BC2A4D;
}

/* Codebox adjustments for BBCode type */
.bbcode-container {
	font-size: 1.2em;
}

li.row .bbcode-container {
	padding: 5px;
}

li.row dl.codebox {
	padding: 3px !important;
}

li.row dl.codebox dt, li.row dl.codebox dd {
	float: none;
	width: auto !important;
}

li.row dl.codebox dd {
	border: 0;
	padding: 0;
}

/* Uploaders
-------------------------------------------- */
.revision-uploader #file-total-progress {
	bottom: -4px;
	left: 0;
	margin: 0;
	position: absolute;
	width: 100%;
}

.revision-uploader .attach-row, .screenshot-uploader .attach-row {
	background-color: #f1f4f6;
	border: 1px dotted #c9cacb;
	border-radius: 3px;
	display: inline-block;
	margin-right: 5px;
	margin-top: 5px;
	padding: 4px;
	position: relative;
}

.revision-uploader .file-name {
	max-width: 100%;
	vertical-align: middle;
}

.revision-uploader .file-status {
	vertical-align: middle;
}

.screenshot-uploader .file-control {
	display: block;
}

.sortable-uploader .attach-row {
	cursor: move;
}

.screenshot-uploader .attach-row {
	display: inline-block;
	padding: 5px;
	position: relative;
	vertical-align: top;
}

.screenshot-uploader .file-status {
	float: right;
	margin-left: 10px;
}

.screenshot-uploader .file-delete {
	cursor: pointer;
	display: inline-block;
	float: none;
	margin-left: 0;
}

.file-control input {
	vertical-align: top;
}

.file-contrib-preview {
	background: #FFFFFF 2px -13px url('./images/icons.png') no-repeat;
	border: 1px solid #C6D8E5;
	border-radius: 4px;
	cursor: pointer;
	display: inline-block;
	height: 8px;
	padding: 3px 2px;
	width: 16px;
}

.file-contrib-preview-active, .file-contrib-preview:hover {
	background-color: #4692bf;
	background-position: 2px 3px;
	border-color: #4692bf;
}

.translations-uploader .attach-comment, .translations-uploader .file-inline-bbcode {
	display: none !important;
}

/* Manage sections
--------------------------------------------- */

/* Queue */
.queue-actions {
	background-color: #F1F4F5;
	width: 100%;
	list-style: none;
	display: block;
	float: left;
	clear: both;
	border-bottom: 1px solid #D4D6D7;
	font-size: 1.1em;
	font-family: Arial, Verdana, Helvetica, sans-serif;
	margin-top: 10px;
}

.queue-actions li {
	display: block;
	float: left;
	padding: 0 3px;
	border-right: 1px solid #FFF;
	border-left: 1px solid #D4D6D7;
	line-height: 2em;
}

.queue-actions li.first { border-left: 0; }
.queue-actions li.last 	{ border-right: 0; }

.queue-actions li.info {
	float: right;
	border: 0;
}

.queue-actions li a {
	color: #585858;
	padding-left: 22px;
	background-repeat: no-repeat;
	background-position: center left;
	position: relative;
	display: block;
	margin-top: 1px;
}

.queue-actions li div a {
	padding: 0 5px;
}

.queue-actions li a:hover {
	text-decoration: none;
	color: #1A2124;
}

.queue-actions img {
	vertical-align: middle;
}

.queue_progress 	{ background-image: url("./images/icon_queue_progress.png"); }
.queue_tested		{ background-image: url("./images/icon_queue_tested.gif"); }
/* ... */

